--- a/web/index.html
+++ b/web/index.html
@@ -40,6 +40,29 @@
   <script src="flutter.js" defer></script>
 </head>
 <body>
+  <script type="module">
+    // Import the functions you need from the SDKs you need
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.4.0/firebase-app.js";
+    import { getAnalytics } from "https://www.gstatic.com/firebasejs/10.4.0/firebase-analytics.js";
+    // TODO: Add SDKs for Firebase products that you want to use
+    // https://firebase.google.com/docs/web/setup#available-libraries
+  
+    // Your web app's Firebase configuration
+    // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+    const firebaseConfig = {
+      apiKey: "AIzaSyB1HC5lkoerc4cyFjC69Aa84lVIgN1fpfU",
+      authDomain: "teacherhelper-eebba.firebaseapp.com",
+      projectId: "teacherhelper-eebba",
+      storageBucket: "teacherhelper-eebba.appspot.com",
+      messagingSenderId: "126181310389",
+      appId: "1:126181310389:web:652bdb47507c2bb7c863fc",
+      measurementId: "G-0GR152KB3N"
+    };
+  
+    // Initialize Firebase
+    const app = initializeApp(firebaseConfig);
+    const analytics = getAnalytics(app);
+  </script>
   <script>
     window.addEventListener('load', function(ev) {
       // Download main.dart.js
